# ZombieDetector

zombie-detector/: README.md  pyproject.toml
zombie-detector/docs/: Makefile  conf.py  configuration.rst  index.rst  performance.rst  tracking.rst
zombie-detector/docs/_build/doctrees/: classification.doctree  configuration.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  performance.doctree  quickstart.doctree  tracking.doctree
zombie-detector/docs/_build/html/: classification.html  configuration.html  examples.html  genindex.html  index.html  installation.html  objects.inv  performance.html  py-modindex.html  (+4 more)
zombie-detector/docs/api/: api.rst  index.rst
zombie-detector/docs/user_guide/: index.rst
zombie-detector/packaging/systemd/: zombie-detector.default  zombie-detector.service
zombie-detector/rpm/: build.spec
zombie-detector/tests/: conftest.py  test_classifier_names.py  test_config_load.py  test_detection.py  test_focused_performance.py  test_kafka_auth.py  test_kafka_publisher.py  test_performance.py  test_performance_large_scale.py  test_procesor_kafka.py  test_real_examples.py  test_tracking.py
zombie-detector/zombie_detector/: __init__.py  main.py  version.py
zombie-detector/zombie_detector/api/: __init__.py  rest.py
zombie-detector/zombie_detector/config/: __init__.py  states.json  zombie-detector.ini
zombie-detector/zombie_detector/core/: __init__.py  classifier.py  processor.py  state_loader.py  zombie_publisher.py  zombie_tracker.py
zombie-detector/zombie_detector/utils/: __init__.py  utils.py
(+23 files in other folders)
