[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zombie_detector*"]

[tool.setuptools]
package-data = { zombie_detector = [
    "config/zombie-detector.ini",
    "config/states.json",
] }

[tool.setuptools_scm]
write_to = "zombie_detector/version.py"
local_scheme = "no-local-version"

[project]
name = "zombie_detector"
dynamic = ["version"]
description = "A FastAPI application for detecting zombie machines in a network."
authors = [
    { name = "Dayron Fernandez Acosta", email = "dayron.fernandez@naudit.es" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1,<0.120.0",
    "uvicorn>=0.20.0,<0.30.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "kafka-python>=2.0.2,<3.0.0"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.scripts]
zombie-detector = "zombie_detector.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-mock>=3.6.0",
    "black>=21.5b2",
    "mypy>=0.812",
    "sphinx>=5.0",
    "sphinx-rtd-theme",
    "sphinx-design",
    "types-requests",
    "types-PyYAML",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
